[package]
name = "wf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wf"
path = "server/main.rs"

[profile.dev]
opt-level = 1


[dependencies]
axum = { version = "0.5.7", features = ["headers"] }
dotenv = "0.15.0"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }
lazy_static = "1.4.0"
itertools = "0.10.3"
tracing = "0.1.35"
tower-http = { version = "0.3.4", features = ["trace"] }
include_dir = "0.7.2"
uri = "0.4.0"
mime_guess = "2.0.4"
ctrlc = { version = "3.2.2", features = ["termination"] }
clap = { version = "3.2.8", features = ["env", "derive"] }
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
owo-colors = "3.4.0"

[dev-dependencies]
assert2 = "0.3.6"
